# ynym-portal-backend

./: .dockerignore  .env.example  .env.sample  .gitignore  .rubocop.yaml  .rubocop.yml  Dockerfile  Gemfile  README.md  compose-develop.yml  compose.yml  compose_develop.yml  main.py  mise.toml  mkdocs.yml  pyproject.toml
.bundle/: config
.devcontainer/: Dockerfile  boot.sh  compose.yml  devcontainer.json
.github/: copilot-instructions.md
.specify/memory/: constitution.md
app/: __init__.py  config.py  database.py  main.py
app/api/: __init__.py  router.py
app/controllers/: application_controller.rb  auth_infos_controller.rb
app/core/: config.py
app/lib/: FirebaseAuthenticator.rb  SupabaseAuthenticator.rb
app/middleware/: __init__.py  logging.py
app/models/: __init__.py  auth_info.rb  base.py  car.rb  confidential.rb  fuel_record.py  note.py  note.rb  note_category.py  page.rb  refueling.rb  section.rb  task.py  task.rb  task_list.rb  user.py  user.rb  vehicle.py
app/repositories/: __init__.py  base.py  fuel_record_repository.py  note_category_repository.py  note_repository.py  task_repository.py  user_repository.py  vehicle_repository.py
app/schemas/: __init__.py  base.py  fuel_record.py  note.py  note_category.py  task.py  (+2 more)
config/: application.rb  cable.yml  credentials.yml.enc  database.yml  master.key  puma.rb  routes.rb
db/: schema.rb  seeds.rb  structure.sql
docs/: README.md
migrations/: 001_create_task_table.sql  002_create_vehicle_table.sql  002_rollback_vehicle_table.sql  002_seed_vehicle_data.sql  002_verify_vehicle_table.sql  003_create_fuel_record_table.sql  003_rollback_fuel_record_table.sql  003_seed_fuel_record_data.sql  003_verify_fuel_record_table.sql  004_create_user_table.sql  005_create_note_categories_table.sql  005_rollback_note_categories_table.sql  005_verify_note_categories_table.sql  006_create_notes_table.sql  006_rollback_notes_table.sql  006_verify_notes_table.sql  README.md  rollback_001_create_task_table.sql  seed_001_task_test_data.sql  verify_schema.sql
openspec/: config.yaml
tests/: conftest.py
(+107 files in other folders)
