[project]
name = "ynym-portal-backend"
version = "0.1.0"
description = "FastAPI backend system for ynym portal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "sqlmodel",
    "asyncpg",
    "pydantic-settings",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "mkdocs",
    "mkdocs-material",
]
