[project]
name = "ynym-portal-backend"
version = "0.1.0"
description = "FastAPI backend system for ynym portal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "sqlmodel",
    "asyncpg",
    "pydantic-settings",
    "python-dotenv",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "mypy",
    "mkdocs",
    "mkdocs-material",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--strict-markers"
markers = [
    "unit: Mark test as unit test",
    "integration: Mark test as integration test",
    "asyncio: Mark test as async test",
]
